daemon: Exit gnome-keyring-daemon when the DBus connection closes

We don't do this via the standard mechanism, as it means that libdbus
just calls _exit() (not even exit()) when the connection goes away.

This can lead to inconsistent state. Shutdown should be orderly.

https://bugzilla.gnome.org/show_bug.cgi?id=708765